--- a/careers.html
+++ b/careers.html
@@ -240,7 +240,7 @@
       }
       .pageTitle h1 {
         text-transform: uppercase;
-        font-size: 4.6rem;
+        font-size: 3rem;
         font-weight: 300;
         margin-bottom: 0;
       }
@@ -462,9 +462,11 @@
             <div class="job-item">
               <div class="job-summary">
                 <span class="toggle-icon">+</span>
-                <span class="job-title">Visualization Design Assistant</span>
+                <span class="job-title"
+                  >Junior Architect (1-3 Years of Experience)</span
+                >
                 <span class="job-area">Architecture</span>
-                <span class="job-location">Barcelona</span>
+                <span class="job-location">Hyderabad</span>
                 <span class="job-deadline">As soon as possible</span>
               </div>
               <div class="job-description">
@@ -516,9 +518,11 @@
             <div class="job-item">
               <div class="job-summary">
                 <span class="toggle-icon">+</span>
-                <span class="job-title">People Coordinator</span>
-                <span class="job-area">People</span>
-                <span class="job-location">Barcelona</span>
+                <span class="job-title"
+                  >Senior Architects (5+ Years of Experience)</span
+                >
+                <span class="job-area">Architecture</span>
+                <span class="job-location">Hyderabad</span>
                 <span class="job-deadline">As soon as possible</span>
               </div>
               <div class="job-description">
@@ -532,9 +536,11 @@
             <div class="job-item">
               <div class="job-summary">
                 <span class="toggle-icon">+</span>
-                <span class="job-title">Constructing Architect</span>
+                <span class="job-title"
+                  >2D Draftsman (4+ Years of Experience)</span
+                >
                 <span class="job-area">Architecture</span>
-                <span class="job-location">Barcelona</span>
+                <span class="job-location">Hyderabad</span>
                 <span class="job-deadline">As soon as possible</span>
               </div>
               <div class="job-description">
