--- a/projects.html
+++ b/projects.html
@@ -831,6 +831,7 @@
                               <h5 class="subHead2">Project Team</h5>
                               <p>Ravi Kumar K</p>
                               <!-- <p>Abdul</p> -->
+                              <p>Ar. Chennakeshava.R</p>
 
                               <p>Ar. Vaishnavi Basireddy</p>
                               <p>Krishna Kanth P</p>
@@ -873,7 +874,7 @@
                     </div>
                     <div class="projectTitleInfo">
                       <h3 class="projectTitle">Aakruti - Clothing Store</h3>
-                      <p class="location">Gachibowli, Hyderabad</p>
+                      <p class="location">AMB Mall, Hyderabad</p>
                     </div>
                   </div>
                   <div class="heroSection">
@@ -907,7 +908,7 @@
                                 <h3 class="projectTitle">
                                   Aakruti - Clothing Store
                                 </h3>
-                                <p class="location">Gachibowli, Hyderabad</p>
+                                <p class="location">AMB Mall, Hyderabad</p>
                                 <p class="location">2025</p>
                               </div>
                             </div>
@@ -1565,7 +1566,7 @@
                             <div class="moreInfo">
                               <div>
                                 <h4>Client</h4>
-                                <p>Murali</p>
+                                <p>Mr. Balaji</p>
                               </div>
                               <div>
                                 <h4>Typology</h4>
@@ -2901,6 +2902,7 @@
 
                               <h5 class="subHead2">Project Team</h5>
                               <p>Ravi Kumar.K</p>
+                              <p>Ar. Chennakeshava.R</p>
 
                               <p>Pavan P NSK</p>
                               <p>Ar. Vaishnavi Basireddy</p>
