--- a/architecture.html
+++ b/architecture.html
@@ -752,7 +752,7 @@
                           />
                         </li>
 
-                        <li class="ss-carousel__item teamBlock threeGrid">
+                        <!-- <li class="ss-carousel__item teamBlock threeGrid">
                           <div class="teamlist">
                             <div>
                               <h5>Project Leader</h5>
@@ -767,7 +767,6 @@
 
                               <h5 class="subHead2">Project Team</h5>
                               <p>Ravi Kumar K</p>
-                              <!-- <p>Abdul</p> -->
 
                               <p>Krishna Kanth P</p>
                               <p>Rajib roy</p>
@@ -791,7 +790,7 @@
                               <p>Tharani M</p>
                             </div>
                           </div>
-                        </li>
+                        </li> -->
                       </ul>
                     </div>
                   </div>
@@ -1015,7 +1014,7 @@
                           </div>
                         </li>
 
-                        <li class="ss-carousel__item teamBlock threeGrid">
+                        <!-- <li class="ss-carousel__item teamBlock threeGrid">
                           <div class="teamlist">
                             <div>
                               <h5>Project Leader</h5>
@@ -1030,7 +1029,6 @@
 
                               <h5 class="subHead2">Project Team</h5>
                               <p>Ravi Kumar K</p>
-                              <!-- <p>Abdul</p> -->
 
                               <p>Krishna Kanth P</p>
                               <p>Rajib roy</p>
@@ -1054,7 +1052,7 @@
                               <p>Tharani M</p>
                             </div>
                           </div>
-                        </li>
+                        </li> -->
                       </ul>
                     </div>
                   </div>
@@ -1308,7 +1306,7 @@
                           </div>
                         </li>
 
-                        <li class="ss-carousel__item teamBlock threeGrid">
+                        <!-- <li class="ss-carousel__item teamBlock threeGrid">
                           <div class="teamlist">
                             <div>
                               <h5>Project Leader</h5>
@@ -1323,7 +1321,6 @@
 
                               <h5 class="subHead2">Project Team</h5>
                               <p>Ravi Kumar K</p>
-                              <!-- <p>Abdul</p> -->
 
                               <p>Krishna Kanth P</p>
                               <p>Rajib roy</p>
@@ -1347,7 +1344,7 @@
                               <p>Tharani M</p>
                             </div>
                           </div>
-                        </li>
+                        </li> -->
                       </ul>
                     </div>
                   </div>
