--- a/architecture.html
+++ b/architecture.html
@@ -564,10 +564,10 @@
                                 <h4>Typology</h4>
                                 <p>Commercial</p>
                               </div>
-                              <div>
+                              <!-- <div>
                                 <h4>Size</h4>
                                 <p>229782.039 S.ft</p>
-                              </div>
+                              </div> -->
                               <div>
                                 <h4>Status</h4>
                                 <p>Conceptual</p>
@@ -841,10 +841,10 @@
                                 <h4>Typology</h4>
                                 <p>Commercial</p>
                               </div>
-                              <div>
+                              <!-- <div>
                                 <h4>Size</h4>
                                 <p>1868 S.ft</p>
-                              </div>
+                              </div> -->
                               <div>
                                 <h4>Status</h4>
                                 <p>Conceptual</p>
@@ -1107,10 +1107,10 @@
                                 <h4>Typology</h4>
                                 <p>Commercial</p>
                               </div>
-                              <div>
+                              <!-- <div>
                                 <h4>Size</h4>
                                 <p>229782.039 S.ft</p>
-                              </div>
+                              </div> -->
                               <div>
                                 <h4>Status</h4>
                                 <p>Conceptual</p>
